# didactic-tribble

./: README.md  config_settings.py  docker-compose.yml  pyproject.toml
airflow/: Dockerfile  base_model.py  constants.py  cron_jobs.py  db.py  env_vars.py  main.py  models.py  routes.py  schemas.py  settings.py  use_cases.py
airflow/alembic/: env.py  script.py.mako
airflow/alembic/versions/: 20230225231348_record.py  20230225232329_record.py  20230225234152_status.py  20230226191432_rate.py  20230226214918_uix_currency_code.py  20230226215808_uix_rate_currency_id_date.py  20230228235913_rate.py  20230301003747_currency.py
airflow/amqp/: connection.py  consumer.py  consumers.py  producers.py
airflow/api/v1/: search.py
airflow/nbk/: client.py  exceptions.py  schemas.py  service.py
airflow/providers/: client.py  schemas.py  service.py
airflow/redis_service/: client.py  connection.py
airflow/srv/v1/: health_check.py
provider-a/: Dockerfile  main.py
provider-b/: Dockerfile  main.py
