[tool.poetry]
name = "didactic-tribble"
version = "0.1.0"
description = ""
authors = ["iosokolov <i.sokolov@trafficwave.kz>"]
readme = "README.md"
packages = [{include = "didactic_tribble"}]

[tool.poetry.dependencies]
python = "^3.10"
sanic = "^22.12.0"
envparse = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
