[tool.poetry]
name = "didactic-tribble"
version = "0.1.0"
description = ""
authors = ["iosokolov <i.sokolov@trafficwave.kz>"]
readme = "README.md"
packages = [{include = "didactic_tribble"}]

[tool.poetry.dependencies]
python = "^3.10"
sanic = "^22.12.0"
envparse = "^0.2.0"
sqlalchemy = "^2.0.4"
psycopg2-binary = "^2.9.5"
asyncpg = "^0.27.0"
alembic = "^1.9.4"
greenlet = "^2.0.2"
pydantic = "^1.10.5"
marshmallow = "^3.19.0"
httpx = "^0.23.3"
xmltodict = "^0.13.0"
apscheduler = "^3.10.0"
aioamqp = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
